--- a/mainproject/pom.xml
+++ b/mainproject/pom.xml
@@ -21,7 +21,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-
+        <!--常用工具包类-->
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>commons</artifactId>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
